# aligned

./: CMakeLists.txt  README.md  conanfile.txt
cmake/: common.cmake
include/aligned/: aligned_allocator  aligned_vector
include/aligned/bits/: aligned_allocator.h  aligned_allocator.hpp  aligned_vector.h
test/: aligned_allocator_test.cpp  aligned_vector_test.cpp  utils.h
